add_library(demux_common index.cpp index.h
                         indexPattern.cpp indexPattern.h
#                         indexSet.cpp indexSet.h
                         indexSingle.cpp indexSingle.h
                         lineType.cpp lineType.h
#                         sampleSheet.cpp sampleSheet.h
                         util.cpp util.h)
