add_library(demux_common fastq.cpp fastq.h
                         index.cpp index.h
                         indexDual.cpp indexDual.h
                         indexPattern.cpp indexPattern.h
#                         indexSet.cpp indexSet.h
                         indexSingle.cpp indexSingle.h
                         lineType.cpp lineType.h
#                         sampleSheet.cpp sampleSheet.h
                         target.cpp target.h
                         util.cpp util.h)
